(WIP): add CES api calls

--- a/receiver/huaweicloudcesreceiver/metadata.yaml
+++ b/receiver/huaweicloudcesreceiver/metadata.yaml
@@ -6,4 +6,4 @@ status:
     development: [metrics]
   distributions: []
   codeowners:
-    active: [heitorganzeli]
+    active: [heitorganzeli, narcis96]
