modify code to make it adaptable for logs

--- a/receiver/huaweicloudreceiver/metadata.yaml
+++ b/receiver/huaweicloudreceiver/metadata.yaml
@@ -1,9 +1,9 @@
-type: huaweicloudcesreceiver
+type: huaweicloudreceiver
 
 status:
   class: receiver
   stability:
-    development: [metrics]
+    development: [metrics, logs]
   distributions: []
   codeowners:
     active: [heitorganzeli, narcis96]
